# foundry-mcp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.json  context.json  schemas.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
src/: chainlist.rs  config.rs  context.rs  conversion.rs  foundry.rs  handlers.rs  lib.rs  main.rs  schema.rs  server.rs  sessions.rs  tokenlist.rs
