[package]
name = "foundry-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "foundry-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.8", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
schemars = "1.0"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.21"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.14"
